--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 excerpt_separator: ""
 url: http://maierfelix.github.io
-title: Ctrl-Dev
+title: Felix Maier
 email: xilefmai@gmail.com
 author: Felix Maier
-description: test
+description: Felix Maier
 paginate: 10
 google_analytics: 
