--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ social-network-links:
   rss: true
   email: "xilefmai@gmail.com"
   github: maierfelix
-  twitter: felixmaier96
+  twitter: _x1m4
 #  facebook: deanattali
 #  reddit: yourname
 #  linkedin: daattali
